# spark-player

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  ffmpeg-player.qrc  main.cc
app/audio/: CMakeLists.txt  audiomanager.cc  audiomanager.h
app/codec/: CMakeLists.txt  ffmpegdecoder.cc  ffmpegdecoder.h  ffmpeghelper.cc  ffmpeghelper.h  ffmpegwriter.cc  ffmpegwriter.h  video_codec_manager.cc  video_codec_manager.h  video_worker_thread.cc  video_worker_thread.h
app/common/: CMakeLists.txt  avdef.h  base_interface.cc  base_interface.h  bufs.h  media_info.h  singleton.h
app/config/: CMakeLists.txt  config.cc  config.h
app/dialog/: CMakeLists.txt
app/dialog/base/: CMakeLists.txt  custom_dialog.cc  custom_dialog.h
app/dialog/media/: CMakeLists.txt  codec_audio_dialog.cc  codec_audio_dialog.h  codec_video_dialog.cc  codec_video_dialog.h  decode_audio_dialog.cc  decode_audio_dialog.h  export_stream_dialog.cc  export_stream_dialog.h  open_media_dialog.cc  open_media_dialog.h
app/media_play/: CMakeLists.txt  stream_event_type.h  video_player.cc  video_player.h  video_player_factory.h
app/media_play/ffmpeg/: CMakeLists.txt  ff_videoplayer.cc  ff_videoplayer.h  video_worker_thread.cc  video_worker_thread.h
app/render/: CMakeLists.txt  render_factory.h  render_wnd.cc  render_wnd.h  video_renderer.cc  video_renderer.h
app/render/opengl/: CMakeLists.txt  opengl_renderer.cc  opengl_renderer.h  render_wnd_gl.cc  render_wnd_gl.h  video_surface_gl.cc  video_surface_gl.h
app/render/qpainter/: CMakeLists.txt  video_player_widget.cc  video_player_widget.h
app/render/sdl2/: CMakeLists.txt  render_wnd_sdl.cc  render_wnd_sdl.h
app/res/shaders/: sprite.frag  sprite.vert  yuv2rgb.frag
app/util/: CMakeLists.txt  cthread.h  decode_frame.h  decode_frame_buf.cc  decode_frame_buf.h
app/widget/: CMakeLists.txt
app/widget/common/: CMakeLists.txt  fast_layout.cc  fast_layout.h  uihelper.cc  uihelper.h  widgets.cc  widgets.h
app/widget/video_display/: CMakeLists.txt  video_display_widget.cc  video_display_widget.h  video_menu.cc  video_menu.h  video_widget.cc  video_widget.h
app/widget/video_display/qpainter_render/: CMakeLists.txt  video_display.cc  video_display.h  video_player_widget.cc  video_player_widget.h
app/window/: CMakeLists.txt
app/window/mainwindow/: CMakeLists.txt  mainmenu.cpp  mainmenu.h  mainstatusbar.cpp  mainstatusbar.h  mainwindow.cpp  mainwindow.h
